--- a/src/styless/home.scss
+++ b/src/styless/home.scss
@@ -31,7 +31,7 @@ $myfont:  Roboto,Helvetica,Arial,sans-serif;
   
   #con{
     position: relative;
-    top: 4vh;
+    top: 3vh;
     left: 13vw;
   }
  
@@ -45,13 +45,13 @@ $myfont:  Roboto,Helvetica,Arial,sans-serif;
     top: 12vh;
       margin-left: 10vw;
       font-weight: bold;
-      font-size: 1.5vw;
+      font-size: 1.7vw;
   
   }
   #titulo{
     top: 12vh;
     margin-left: 10vw;
-    font-size: 1.2vw;
+    font-size: 1.3vw;
    
   }
 
@@ -63,7 +63,7 @@ $myfont:  Roboto,Helvetica,Arial,sans-serif;
     top: 12vh;
     margin-left: 10vw;
     height: 5.5vh;
-    font-size: 0.75rem;
+    font-size: 0.85rem;
     outline:none;
     font-weight: bold;
     width: 10vw;
@@ -79,4 +79,9 @@ $myfont:  Roboto,Helvetica,Arial,sans-serif;
 body{
   background-color: #E7E7E7;
   overflow-x: hidden;
+}
+
+@media screen and (max-width:600px) {
+  
+  
 }
