projects section background changed to white

--- a/src/styless/home.scss
+++ b/src/styless/home.scss
@@ -79,6 +79,21 @@ $myfont:  Roboto,Helvetica,Arial,sans-serif;
 body{
   background-color: #E7E7E7;
   overflow-x: hidden;
+  &::-webkit-scrollbar {
+    background-color: white;
+    
+  }
+
+  &::-webkit-scrollbar-thumb{
+     background-color: black;
+     height: 100px;
+     border-left: 3px solid white;
+    border-right: 3px solid white;
+    
+  }
+
+
+  
 }
 
 @media screen and (max-width:600px) {
