--- a/src/styless/skills.scss
+++ b/src/styless/skills.scss
@@ -12,7 +12,6 @@
     text-align: center;
     border-radius: 5px;
     font-weight: bold;
-    transition: top 1s;
     }
 
   @mixin con{
@@ -31,7 +30,7 @@
  
  
  #uicon{
-     @include con()
+     @include con();
      
  }
 }
@@ -39,7 +38,7 @@
 #front{
     @include skillsq(black);
     #frontcon{
-        @include con()
+        @include con();
     }
 }
 
@@ -78,6 +77,10 @@
     margin-top: 38vh;
     margin-left: 5vw;
     width: 70vw;
+    #rescon{
+      width: 70vw;
+      
+  }
     
     
   }
