--- a/src/styless/home.scss
+++ b/src/styless/home.scss
@@ -100,7 +100,12 @@ body{
 }
 
 @media screen and (max-width:600px) {
+  body{
+    background-color: white;
+  }
+  
   #fondo{
+    
     #nav{
       p{
         font-size: 12px;
