portfolio image opacity bug fixed

--- a/src/styless/_portfolio.scss
+++ b/src/styless/_portfolio.scss
@@ -116,6 +116,9 @@
             position: relative;
             left: -34.2vw;
             width: 97vw;
+            &:hover{
+                opacity: 1;
+            }
         }
     }
 
@@ -128,6 +131,9 @@
             position: relative;
             left: -34.2vw;
             width: 97vw;
+            &:hover{
+                opacity: 1;
+            }
         }
     }
     
