--- a/src/styless/home.scss
+++ b/src/styless/home.scss
@@ -100,6 +100,16 @@ body{
 }
 
 @media screen and (max-width:600px) {
+  #fondo{
+    #nav{
+      div{
+        display: none;
+      }
+    }
+    
+  }
+  
+
   body{
     background-color: white;
   }
