--- a/src/styless/about.scss
+++ b/src/styless/about.scss
@@ -1,10 +1,37 @@
-#aboutme{
-    font-family: Roboto;
+#abcon{
     position: relative;
-    top: 20vh;
-    left: 25vw;
-    font-size: 20px;
-    color: dimgray;
-    text-align: justify;
-    text-justify: inter-word;
+    
+    #aboutmemo{
+        font-family: Roboto;
+        position: relative;
+        top: 20vh;
+        display: none;
+        font-size: 20px;
+        color: dimgray;
+        text-align: justify;
+        
+    }
+
+    #aboutmede{
+        font-family: Roboto;
+        position: relative;
+        top: 20vh;
+        left: 24vw;
+        font-size: 20px;
+        color: dimgray;
+        text-align: justify;
+        
+    }
+}
+
+@media screen and (max-width:600px) {
+   #abcon{
+       #aboutmemo{
+         display: block;
+       }
+
+       #aboutmede{
+        display: none;
+    }
+   }
 }
