nav bar finished

--- a/src/styless/home.scss
+++ b/src/styless/home.scss
@@ -27,6 +27,8 @@ $myfont:  Roboto;
     z-index: 5;
     background-color: white;
     width: 89.99vw;
+    padding-bottom: 1.7vh;
+    transition: top 0.5s;
     p{
       
       color: black;
