portfolio section transition fixed

--- a/src/styless/_portfolio.scss
+++ b/src/styless/_portfolio.scss
@@ -114,6 +114,7 @@
 
    #imacon{
     #imle{
+        transition: left 0s;
         button{
             margin-bottom: 20vh;
             left: 67px;
@@ -130,6 +131,7 @@
     }
 
     #imre{
+        transition: left 0s;
         button{
             margin-bottom: 20vh;
             left: 67px;
