--- a/src/styless/drop.scss
+++ b/src/styless/drop.scss
@@ -12,9 +12,17 @@
   margin-bottom: 50px;
   
   }
+
+  #link{
+    color: black;
+    text-decoration: none;
+  }
+  
 }
 
-
+#daniel{
+  color: black;
+}
 
 #barspres{
     position: relative;
