--- a/src/styless/home.scss
+++ b/src/styless/home.scss
@@ -1,5 +1,6 @@
 $myfont:  Roboto;
 @import "portfolio","contact","skills";
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 #fondo{
   background-color:white;
@@ -43,13 +44,21 @@ $myfont:  Roboto;
       &:hover{
         color: #787878;
       }
+      
     }
     .rnav{
       z-index: 5;
       left: 35vw;
+      
     }
   }
   
+  #projects{
+    background-color: #073042;
+    position: absolute;
+    
+    } 
+
   #con{
     position: relative;
     top: 15vh;
