--- a/src/styless/about.scss
+++ b/src/styless/about.scss
@@ -29,7 +29,7 @@
        #aboutmemo{
          display: block;
          font-size: 17px;
-         
+         line-height: 1.2em;
        }
 
        #aboutmede{
