--- a/src/styless/about.scss
+++ b/src/styless/about.scss
@@ -2,7 +2,7 @@
     position: relative;
     
     #aboutmemo{
-        font-family: Roboto;
+        font-family: Roboto, Arial;
         position: relative;
         top: 20vh;
         display: none;
@@ -13,7 +13,7 @@
     }
 
     #aboutmede{
-        font-family: Roboto;
+        font-family: Roboto, Arial;
         position: relative;
         top: 34vh;
         left: 24vw;
