--- a/src/styless/about.css
+++ b/src/styless/about.css
@@ -2,7 +2,7 @@
   position: relative;
 }
 #abcon #aboutmemo {
-  font-family: Roboto;
+  font-family: Roboto, Arial;
   position: relative;
   top: 20vh;
   display: none;
@@ -11,7 +11,7 @@
   text-align: justify;
 }
 #abcon #aboutmede {
-  font-family: Roboto;
+  font-family: Roboto, Arial;
   position: relative;
   top: 34vh;
   left: 24vw;
@@ -20,11 +20,25 @@
   text-align: justify;
 }
 
+#heading {
+  font-family: system-ui, Arial, sans-serif;
+  font-weight: bold;
+  font-size: 32px;
+  color: black;
+  position: relative;
+  top: 30vh;
+  left: 50vh;
+}
+
 @media screen and (max-width: 600px) {
+  #heading {
+    top: 18vh;
+    left: 5vh;
+  }
   #abcon #aboutmemo {
     display: block;
-    font-size: 17px;
-    line-height: 1.2em;
+    font-size: 20px;
+    line-height: 28px;
   }
   #abcon #aboutmede {
     display: none;
