--- a/src/styless/home.css
+++ b/src/styless/home.css
@@ -94,13 +94,15 @@
   }
   #imacon #imle button {
     margin-bottom: 20vh;
-    left: 67px;
+    left: 95px;
+    top: 13.3vh;
     margin-left: 20px;
     font-weight: bold;
   }
   #imacon #imle img {
     position: relative;
     left: -30px;
+    height: 40vh;
     width: 97vw;
   }
   #imacon #imle img:hover {
@@ -111,11 +113,13 @@
   }
   #imacon #imre button {
     margin-bottom: 20vh;
-    left: 67px;
+    left: 95px;
     margin-left: 20px;
+    top: 13.3vh;
   }
   #imacon #imre img {
     position: relative;
+    height: 40vh;
     left: -30px;
     width: 97vw;
   }
@@ -127,8 +131,8 @@
   }
   #imrepa {
     margin-top: 6vh;
-    left: -40vw;
-    top: 125vh;
+    left: -37vw;
+    top: 130vh;
     display: block;
   }
 }
