--- a/src/styless/about.scss
+++ b/src/styless/about.scss
@@ -2,7 +2,7 @@
     position: relative;
     
     #aboutmemo{
-        font-family: Roboto, Arial;
+        font-family: Arial,system-ui;
         position: relative;
         top: 20vh;
         display: none;
@@ -13,7 +13,7 @@
     }
 
     #aboutmede{
-        font-family: Roboto, Arial;
+        font-family: Arial,system-ui;
         position: relative;
         top: 34vh;
         left: 24vw;
@@ -25,7 +25,7 @@
 }
 
 #heading{
-    font-family: system-ui,Arial,sans-serif;
+    font-family: Roboto,system-ui,Arial;
     font-weight: bold;
     font-size: 32px;
     color: black;
