--- a/src/styless/drop.css
+++ b/src/styless/drop.css
@@ -23,5 +23,6 @@
   position: relative;
   left: 77.9vw;
   top: 5vh;
+  font-weight: bold;
   font-size: 22px;
 }/*# sourceMappingURL=drop.css.map */
