--- a/src/styless/home.scss
+++ b/src/styless/home.scss
@@ -1,4 +1,4 @@
-$myfont:  Roboto, Arial;
+$myfont:  Roboto,Arial,system-ui;
 @import "portfolio","contact","skills";
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
@@ -54,7 +54,7 @@ $myfont:  Roboto, Arial;
   }
   
   .links{
-    font-family: Roboto, Arial;
+    font-family: Roboto, Arial,system-ui;
     font-weight: bold;
     margin-left: 6vw;
     text-decoration: none;
@@ -108,7 +108,7 @@ $myfont:  Roboto, Arial;
   }
 
   button{
-    background-color: #073042;
+    background-color: black;
     border: none;
     color: white;
     font-weight: bold;
@@ -117,8 +117,8 @@ $myfont:  Roboto, Arial;
     margin-left: 10vw;
     height: 48px;
     letter-spacing: 0.0625rem;
-    text-transform: uppercase;
-    font-size: 0.75rem;
+    
+    font-size: 16px;
     outline:none;
     width: 7.8vw;
     font-family: $myfont;
@@ -126,6 +126,7 @@ $myfont:  Roboto, Arial;
     cursor: pointer;
     &:hover{
       background-color: #30b069;
+      color: black;
     }
   }
 }
@@ -213,9 +214,20 @@ body{
       width: 100px;
       margin-left: 0vw;
       background-color: #30b069;
+      color: black;
     }
 
     
   }
   
+}
+
+::-moz-selection { 
+  color: black;
+  background: #30b069;
+}
+
+::selection {
+  color: black;
+  background: #30b069;
 }
